--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
 
-	<h1>Logica com JS</h1>
-	<script type="text/javascript">
-		alert("Hello World")
-	</script>
+	<h1>Lógica com JS</h1>
+
+		<script type="text/javascript">
+			//Exibindo Mensagens
+			alert("Hello World");//Exibe um pop up com a mensagem
+			document.write("Hello World");//Escreve no html
+			console.log("Hello World");//Exibe no console do navegador
+		</script>
 
 </body>
 </html>
