trabalhando com variaveis

--- a/programa 01.html
+++ b/programa 01.html
@@ -19,7 +19,7 @@
 		document.write("Nome: " + nome + "<br>");//concatenação (junção)
 		document.write("Idade: " +Idade + "<br>");
 		document.write("Cidade: " + cidade + "<br>");
-		document.write("Estado: " + estado + "<br>");
+		document.write("Estado: " + estado);
 
 
 	</script>
