corrigindo minha variavel idade

--- a/programa 01.html
+++ b/programa 01.html
@@ -17,7 +17,7 @@
 		//Exibindo na tela os valores das variáveis
 		document.write("informações: " + "<br>");
 		document.write("Nome: " + nome + "<br>");//concatenação (junção)
-		document.write("Idade: " +Idade + "<br>");
+		document.write("Idade: " +idade + "<br>");
 		document.write("Cidade: " + cidade + "<br>");
 		document.write("Estado: " + estado);
 
