colocando tag h2 na informaçao

--- a/programa 01.html
+++ b/programa 01.html
@@ -15,7 +15,7 @@
 		var cidade = "Teresina";
 		var estado = "PI";
 		//Exibindo na tela os valores das variáveis
-		document.write("informações: " + "<br>");
+		document.write("<h2>Informações:</h2> " + "<br>");
 		document.write("Nome: " + nome + "<br>");//concatenação (junção)
 		document.write("Idade: " +idade + "<br>");
 		document.write("Cidade: " + cidade + "<br>");
