--- a/programa02.html
+++ b/programa02.html
@@ -24,6 +24,17 @@
 			//tiver como resultado false.
 			document.write("Não é igual ou seja false")
 		};
+		document.write("<h2>Testando as variáveis s1 e s2:</h2>");
+		if (s1 == s2){
+			//Este bloco de código só sera executado se o teste
+			//tiver como resultado true.
+			document.write("São iguais ou seja true")
+		}
+		else{
+			//Este bloco de código só sera executado se o teste
+			//tiver como resultado true.
+			document.write("Não são iguais ou seja false")
+		}
 
 	
 
