--- a/programa02.html
+++ b/programa02.html
@@ -36,7 +36,17 @@
 			document.write("Não são iguais ou seja false")
 		}
 
-	
+		document.write("<h2>Testando o simbolo diferente 3 e 3</h2>" + "<br>") 
+		if (3 != 3) {
+			//Este bloco de código só será exucutado se o teste
+			//tiver como resultado true.
+			document.write("É igual ou seja true")
+		}
+		else{
+			//Este bloco de código só sera executado se o teste
+			//tiver como resultado true.
+			document.write("Não são iguais ou seja false")
+		}
 
 	</script>
 
