Testando o simbolo != com nome

--- a/programa02.html
+++ b/programa02.html
@@ -40,12 +40,26 @@
 		if (3 != 3) {
 			//Este bloco de código só será exucutado se o teste
 			//tiver como resultado true.
-			document.write("É igual ou seja true")
+			document.write("É diferente ou seja true")
 		}
 		else{
 			//Este bloco de código só sera executado se o teste
 			//tiver como resultado true.
-			document.write("Não são iguais ou seja false")
+			document.write("Não é diferente ou seja false")
+		}
+
+		var l1 = "lua";
+		var s0 = "sol";
+		document.write("<h2>Testando o simbolo diferente l1 e s0</h2>" + "<br>") 
+		if (l1 != s0){
+			//Este bloco de código só será  executado se o teste
+			//tiver como resultado true.
+			document.write("É diferente ou seja true")
+		}
+		else{
+			//este bloco de código só será executado se o teste
+			//tiver como resultado false.
+			document.write("Não é diferente ou seja false")
 		}
 
 	</script>
