Entrada de dados

--- a/programa06.html
+++ b/programa06.html
@@ -19,6 +19,8 @@
 			pulaLinha();
 		}
 		function calculaIMC(peso, altura){
+			var peso = prompt("Informe seu peso");
+			var altura = prompt("Informe sua altura");
 			var imc = peso / (altura * altura);
 			//passando para a função mostra exibir o resultado.
 			//Usamos o método round da classe Math para arredondar.
