Entendendo as funções

--- a/programa06.html
+++ b/programa06.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Funções com parametros no JavaScript</title>
 	<meta charset="utf-8">
 </head>
 <body>
@@ -24,7 +24,7 @@
 			var imc = peso / (altura * altura);
 			//passando para a função mostra exibir o resultado.
 			//Usamos o método round da classe Math para arredondar.
-			mostra("seu IMC é: " + Math.round(imc));
+			mostra("Seu IMC é: " + Math.round(imc));
 		}
 		//Chama a função para a realização do cálculo.
 		calculaIMC(66, 1.70);
