--- a/chamadas_funções.html
+++ b/chamadas_funções.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Chamadas as funções</title>
+	<title>Chamadas as funcoes</title>
 	<meta charset="utf-8">
 </head>
 <body>
