--- a/Estrutura_de_controle.html
+++ b/Estrutura_de_controle.html
@@ -15,7 +15,15 @@
 		var peso = parseInt(prompt("Informe seu peso"));
 		var altura = parseFloat(prompt("Informe sua altura"));
 		var imc = peso / (altura * altura);
-		document.write("Seu peso é: " + imc)
+		
+		if (imc < 18){
+			document.write("Seu IMC é: " + imc + "<br>");
+			document.write("Cuidado, seu status é: Magreza.");
+		}
+		else{
+			document.write("Seu IMC é: " + imc + "<br>")
+			document.write("Pelo menos seu status nao é Magreza.")
+		}
 
 	}
 	//Chama a função para a realização do cálculo.
