--- a/programa 11.html
+++ b/programa 11.html
@@ -7,10 +7,10 @@
 <body>
 
 	<h1>Entendendo o SWITCH</h1>
-	<SCRIPT TYPE="text/javascript">
+	<script type="text/javascript">
 
 	/*instacionamos um objeto do tipo Data e chamamos um método que verifica o dia atual*/
-	var dia = new date().getDay();
+	var dia = new Date().getDay();
 	var diaSemana;
 	switch(dia){
 		case 0:
@@ -40,7 +40,7 @@
 	}
 	document.write("Hoje é: " + diaSemana);
 
-	</SCRIPT>
+	</script>
 
 </body>
 </html>
