--- a/programa09.html
+++ b/programa09.html
@@ -8,13 +8,13 @@
 
 	<h1>Entendendo o FOR</h1>
 	<script type="text/javascript">
-	//Decalarções de arroy de frutas
+	/*//Decalarções de arroy de frutas
 	frutas = ["Pera", "Uva", "Maça", "Salada Mista"]
-	/*O laço FOR serve para fazermos interações em coleções*/
+	//O laço FOR serve para fazermos interações em coleções
 	for(var i = 0; i < frutas.length; i++){
 		document.write("Eu gosto de: " + frutas[i] + "<br>");
-	}
-	for(var  n = 1; n <= 10; n++){
+	}*/
+	for(var  n = 2; n <= 100; n++){
 		document.write(n*n + "<br>")
 	}
 
